[package]
name = "rusty-boy"
version = "0.1.0"
authors = ["Matias Moran <matimoran03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.2"

ron = "0.7.0"
winit = { version = "0.25.0", features = ["serde"]}
serde = { version = "1.0.130", default-features = false, features = ["derive"] }

imgui = { git = "https://github.com/imgui-rs/imgui-rs", features = ["docking"] }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs" }
imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs" }
